--- a/GameboyCameraClient/GameboyCameraClient.csproj
+++ b/GameboyCameraClient/GameboyCameraClient.csproj
@@ -52,12 +52,21 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Form_view.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form_view.Designer.cs">
+      <DependentUpon>Form_view.cs</DependentUpon>
+    </Compile>
     <Compile Include="GetThread.cs" />
     <Compile Include="Helper.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form_view.resx">
+      <DependentUpon>Form_view.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
