--- a/GameboyCameraClient/GameboyCameraClient.csproj
+++ b/GameboyCameraClient/GameboyCameraClient.csproj
@@ -56,6 +56,12 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Form_mosaic.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form_mosaic.Designer.cs">
+      <DependentUpon>Form_mosaic.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form_scaler.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -74,6 +80,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form_mosaic.resx">
+      <DependentUpon>Form_mosaic.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form_scaler.resx">
       <DependentUpon>Form_scaler.cs</DependentUpon>
